[workspace]

members = [
    "src/rust-jobs/add",
    "src/rust-jobs/enum-as-param",
    "src/rust-jobs/option",
    "src/rust-jobs/option-and-then",
    "src/rust-jobs/option-is-some-and",
    "src/rust-jobs/option-or",
    "src/rust-jobs/option-unwrap-or",
    "src/rust-jobs/option-vec-map",
    "src/rust-jobs/pointer",
    "src/rust-jobs/string-parse",
    "src/rust-jobs/vec",
]
