cargo-features = ["profile-rustflags"]

[workspace]

members = [
    "src/rust-jobs/*",
]

[profile.dev]
panic = "abort"
opt-level = 2

rustflags = [
   "-Clinker-plugin-lto", 
   "-Clinker=clang-14",
   "-Clink-arg=-fuse-ld=lld",
   "-Zemit-thin-lto=no",
]

[profile.release]
panic = "abort"
opt-level = 2

rustflags = [
   "-Clinker-plugin-lto", 
   "-Clinker=clang-14",
   "-Clink-arg=-fuse-ld=lld",
   "-Zemit-thin-lto=no"
]

[profile.dev.package.smallvec-drain-error-lib]
overflow-checks = false

[profile.release.package.smallvec-drain-error-lib]
overflow-checks = false
