add_subdirectory(add)
add_subdirectory(enum-as-param)
add_subdirectory(option)
add_subdirectory(option-and-then)
add_subdirectory(option-is-some-and)
add_subdirectory(option-or)
add_subdirectory(option-unwrap-or)
add_subdirectory(option-vec-map)
add_subdirectory(pointer)
add_subdirectory(result-and_then)
add_subdirectory(result-as_deref)
add_subdirectory(result-cloned)
add_subdirectory(result-copied)
add_subdirectory(result-iter_mut)
add_subdirectory(result-transpose)
add_subdirectory(result-unwrap_or_else)
add_subdirectory(string-parse)
add_subdirectory(vec)
add_subdirectory(vec-filter)
add_subdirectory(vec-sort-reverse)
