add_subdirectory(add)
add_subdirectory(custom-print)
add_subdirectory(custom-print-no-std)
add_subdirectory(custom-print-writer)
add_subdirectory(custom-vec)
add_subdirectory(custom-vec-drain)
add_subdirectory(custom-vec-final)
add_subdirectory(custom-vec-loop-unroll)
add_subdirectory(custom-vec-raw_vec)
add_subdirectory(custom-vec-zst-alignment-issue)
add_subdirectory(empty-print)
add_subdirectory(enum-as-param)
add_subdirectory(option)
add_subdirectory(option-and-then)
add_subdirectory(option-is-some-and)
add_subdirectory(option-or)
add_subdirectory(option-unwrap-or)
add_subdirectory(option-vec-map)
add_subdirectory(panic-test)
add_subdirectory(pointer)
add_subdirectory(result-and_then)
add_subdirectory(result-as_deref)
add_subdirectory(result-cloned)
add_subdirectory(result-copied)
add_subdirectory(result-iter_mut)
add_subdirectory(result-transpose)
add_subdirectory(result-unwrap_or_else)
add_subdirectory(sea-vec)
add_subdirectory(smallvec)
add_subdirectory(smallvec-bound2)
add_subdirectory(smallvec-bound4)
add_subdirectory(smallvec-bound8)
add_subdirectory(smallvec-drain-error)
add_subdirectory(string-parse)
add_subdirectory(tinyvec-arrayvec)
add_subdirectory(tinyvec-capacity-error)
add_subdirectory(tinyvec-remove-error)
add_subdirectory(vec)
add_subdirectory(vec-filter)
add_subdirectory(vec-sort-reverse)
