[package]
name = "sea"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
libc = "0.2"
sea = { version = "0.1.0", optional = true }

[features]
default = []  # Specify other default features here, if any
std = []
panic_error = []