[package]
name = "sea"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
libc = "0.2"
unroll = "0.1.5"
sea = { version = "0.1.0", optional = true }

[dependencies.custom-print]
version = "1.0.0"
default-features = false

[features]
default = []  # Specify other default features here, if any
std = []
panic_error = []
