cargo-features = ["profile-rustflags"]

[package]
name = "add-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]

[dependencies.sea]
path = "../../sea-lib"
default-features = false
features = ["panic_error"]

[features]
# default = []  # Specify other default features here, if any
# std = ["sea/std"]

# [dependencies]
# libc = "0.2"
# sea_rs_common = { path = "../../sea_rs_common" }
# sea = { path = "../../sea-lib", default-features = false, optional = true  }

# [features]
# default = []  # Specify other default features here, if any
# std = ["sea", "sea/std"]

# sea = { path = "../../sea-lib", features = [] }
# sea = { path = "../../sea-lib"  }
