cargo-features = ["profile-rustflags"]

[package]
name = "add-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]

[dependencies.sea]
path = "../../sea-lib"
default-features = false
features = ["panic_error"]

[features]
default = []

[dependencies.custom-print]
version = "0.1.0"
default-features = false
