cargo-features = ["profile-rustflags"]

[package]
name = "borsh-option-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]
# compiler_builtins = { version = "0.1.99", features = ["no-asm"] }
borsh = "0.10.3"

[dependencies.sea]
path = "../../sea-lib"
default-features = false
features = ["std"]

[features]
default = []  # Specify other default features here, if any          
