cargo-features = ["profile-rustflags"]

[package]
name = "borsh-lib"
version = "0.1.0"
edition = "2021"

# [profile.dev]
# rustflags = ["-C", "no-stack-check"]

# [profile.release]
# rustflags = ["-C", "no-stack-check"]

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]
# compiler_builtins = { version = "0.1.99", features = ["no-asm"] }
borsh = "0.10.3"


[dependencies.sea]
path = "../../sea-lib"
default-features = false
features = ["std"]

[features]
# no-asm = []
default = []  # Specify other default features here, if any        
