cargo-features = ["profile-rustflags"]

[package]
name = "custom-print-no-std-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]
libc = "0.2"
sea_rs_common = { path = "../../sea_rs_common" }
sea = { path = "../../sea-lib" }

[dependencies.custom-print]
version = "0.1.0"
default-features = false
features = ["alloc"]
