cargo-features = ["profile-rustflags"]

[package]
name = "option-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]
libc = "0.2"
sea_rs_common = { path = "../../sea_rs_common" }

[profile.dev]
linker = "lld"

panic = "abort"
opt-level = 2

rustflags = [
   "-Clinker-plugin-lto", 
   "-Clinker=clang-14",
   "-Clink-arg=-fuse-ld=lld",
   "-Zemit-thin-lto=no",
]

[profile.release]
panic = "abort"
opt-level = 2

rustflags = [
   "-Clinker-plugin-lto", 
   "-Clinker=clang-14",
   "-Clink-arg=-fuse-ld=lld",
   "-Zemit-thin-lto=no"
]
