cargo-features = ["profile-rustflags"]

[package]
name = "serde-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]
libc = "0.2"
serde-json-core = "0.5.1"
# serde_json = "1.0"
# serde_cbor = "0.11"
# serde = { version = "1.0", default-features = false }
# serde = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1", default-features = false }
# serde_derive = { version = "1", features = ["std"] } # Disable std feature for serde_derive
heapless = "0.7" # For I/O operations in no_std environment


[dependencies.sea]
path = "../../sea-lib"
default-features = false
features = ["panic_error"]
# features = ["std"]


# [dependencies.serde]
# version = "1.0"
# default-features = false
# features = ["derive"] # "alloc"


[features]
default = []  # Specify other default features here, if any        
