cargo-features = ["profile-rustflags"]

[package]
name = "smallvec-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]
libc = "0.2"

[dependencies.smallvec]
version = "1.10.0"
features = ["const_new"]

[dependencies.sea]
path = "../../sea-lib"
default-features = false
features = []

[features]
default = []  # Specify other default features here, if any        
