cargo-features = ["profile-rustflags"]

[package]
name = "tinyvec-capacity-error-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]
libc = "0.2"

[dependencies.tinyvec]
version = "1.6.0"  # Latest release that still contains the error: https://github.com/Lokathor/tinyvec/pull/178
features = ["rustc_1_55"]

[dependencies.sea]
path = "../../sea-lib"
default-features = false
features = []

[features]
default = []  # Specify other default features here, if any        
