cargo-features = ["profile-rustflags"]

[package]
name = "tinyvec-remove-error-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]
libc = "0.2"
tinyvec = "0.2.0"  # Latest release that still contains the error: https://github.com/Lokathor/tinyvec/pull/29

[dependencies.sea]
path = "../../sea-lib"
default-features = false
features = []

[features]
default = []  # Specify other default features here, if any        
