cargo-features = ["profile-rustflags"]

[package]
name = "vec-sort-reverse-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]

[dependencies.sea]
path = "../../sea-lib"
default-features = true
# features = ["panic_error"]

[features]
default = []  # Specify other default features here, if any
